lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:14: error: too many arguments for method initialize: ()Array[Double]
  	var debut=initialize(0)
                            ^Lander:15: error: too many arguments for method initialize: ()Array[Double]
  	var fin = initialize(1)
                            ^